--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Add required DLL files to prevent errors. 
+!Assets/SteamVR/Input/Plugins/JSON.NET/Valve.Newtonsoft.Json
