chore: Update .gitignore file and add missing DLL for SteamVR
Update .gitignore file to include the dll for SteamVR to prevent errors.
Added some specific messaging for students to better understand how many
pooled balls they have in the scene.

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,4 @@ sysinfo.txt
 *.unitypackage
 
 # Add required DLL files to prevent errors. 
-!Assets/SteamVR/Input/Plugins/JSON.NET/Valve.Newtonsoft.Json
+!Assets/SteamVR/Input/Plugins/JSON.NET/Valve.Newtonsoft.Json.dll
